tests/cases/loops/errors/err_for_missing_colon.aipl
fn f() -> i64 { for (let c "x") { 0 } 0 }
--- errors ---
error: unexpected "x"; expected ':'
 --> input:1:28
  |
1 | fn f() -> i64 { for (let c "x") { 0 } 0 }
  |                            ^^^
